--- a/beispiel-01/main.css
+++ b/beispiel-01/main.css
@@ -2,7 +2,7 @@
 body {	
 	margin: 0 0; 
 	padding: 0 0; 
-	font-family: helvetica, arial, sans-serif; 
+	font-family: sans-serif; 
 	color: white
 }
 
@@ -29,6 +29,8 @@ body {
 
 .scrollVal { 
 	font-size: 24px; 
+	top: 20px; 
+	left: 100px; 
 	position: fixed; 
 	vertical-align: bottom; 
 }
