--- a/beispiel-02/main.css
+++ b/beispiel-02/main.css
@@ -2,7 +2,7 @@
 body {	
 	margin: 0 0; 
 	padding: 0 0; 
-	font-family: helvetica, arial, sans-serif; 
+	font-family: sans-serif; 
 	color: white
 }
 
@@ -14,40 +14,20 @@ body {
 	text-align: center;
 
 }
-
-.section1 { 
+.obj-skrollr { 
+	z-index: 300;
+	top: 60px; 
+	left: 400px; 
 	color: white;
-	width: 100%; 
-	height: 768px; 
-	background-color: red; 
+	width: 200px; 
+	height: 200px; 
+	position: fixed;  
+	background-color: orange; 
 	text-align: center;
 }
-
-.section2 { 
-	color: white;
-	width: 100%; 
-	height: 768px; 
-	background-color: blue; 
-	text-align: center;
-}
-
-.section3 { 
-	color: white;
-	width: 100%; 
-	height: 768px; 
-	background-color: green; 
-	text-align: center;
-}
-
-.scrollVal { 
-	color: white;
-	font-size: 24px; 
-	position: fixed; 
-	vertical-align: bottom; 
-}
-
 .obj { 
-	top: 20px; 
+	z-index: 200;
+	top: 60px; 
 	left: 100px; 
 	width: 200px; 
 	height: 200px; 
@@ -55,4 +35,39 @@ body {
 	background-color: yellow; 
 	text-align: center; 
 	color: black
+}
+.section0 { 
+	color: white;
+	width: 100%; 
+	height: 768px; 
+	background-color: fuchsia; 
+	text-align: center;
+}
+.section1 { 
+	color: white;
+	width: 100%; 
+	height: 768px; 
+	background-color: red; 
+	text-align: center;
+}
+.section2 { 
+	color: white;
+	width: 100%; 
+	height: 768px; 
+	background-color: blue; 
+	text-align: center;
+}
+.section3 { 
+	color: white;
+	width: 100%; 
+	height: 768px; 
+	background-color: green; 
+	text-align: center;
+}
+.scrollVal { 
+	z-index: 100;
+	color: white;
+	font-size: 24px; 
+	position: fixed; 
+	vertical-align: bottom; 
 }
